--- a/DRHSWS_UI/src/app/auth/login/login.component.html
+++ b/DRHSWS_UI/src/app/auth/login/login.component.html
@@ -13,6 +13,6 @@
       formControlName="password"
       [ngClass]="{'is-invalid': (loginForm?.controls['password']?.touched && loginForm.controls['password'].errors)}">
     <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-    <p class="mt-5 mb-3 text-muted">Not a member? Contact Advisor _________</p>
+    <p class="mt-5 mb-3 text-muted">Not working? Contact Elizabeth Berry</p>
   </form>
 </div>
