--- a/DRHSWS_UI/src/app/home/home.component.html
+++ b/DRHSWS_UI/src/app/home/home.component.html
@@ -10,12 +10,12 @@ provides consultants to help students with their writing assignments. In order t
 page and submit your paper through the dropbox. </p>
 
 <div class="dropdown">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-          Dropdown button
-        </button>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Link 1</a>
-          <a class="dropdown-item" href="#">Link 2</a>
-          <a class="dropdown-item" href="#">Link 3</a>
-        </div>
-      </div>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Dropdown button
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenu">
+      <a class="dropdown-item" href="#">Item</a>
+      <a class="dropdown-item" href="#">Another item</a>
+      <a class="dropdown-item" href="#">One more item</a>
+    </div>
+  </div>
