--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,8 +32,8 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
-  </nav>
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  </nav> -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
   <div><a routerLink="/"><img alt="WC logo" /></a></div>
 
@@ -73,4 +73,4 @@
       </li>
     </ul>
   </div>
-</nav>  -->
+</nav> 
