--- a/DRHSWS_UI/src/app/review/pending/pending.component.html
+++ b/DRHSWS_UI/src/app/review/pending/pending.component.html
@@ -59,7 +59,7 @@
     <div class="form-group">
       <textarea class="form-control" cols="9" rows="3" name="review" ngModel></textarea>
     </div>
-    <button id="edit" type="submit" class="btn btn-outline-primary">Write Review {{i}}</button>
+    <button id="edit" type="submit" class="btn btn-outline-primary">Write Review</button>
       </form>
 </div>
 <br>
