--- a/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
+++ b/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
@@ -50,19 +50,19 @@
   
   <ng-container matColumnDef="Action" >
     <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let reviews" id="actions"> 
+    <td mat-cell *matCellDef="let consultants; let i = index" id="actions"> 
       <button id="edit" mat-icon-button color="primary">
         <mat-icon>edit</mat-icon>
       </button>
-      <button id="delete"mat-icon-button color="warn">
-        <mat-icon>delete</mat-icon>
+      <button id="delete" mat-icon-button color="warn">
+        <mat-icon>delete</mat-icon> {{i}}
       </button>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let consultants"> {{consultants.firstName}} {{consultants.lastName}}</td>
+    <td mat-cell *matCellDef="let consultants"> {{consultants.firstName}} {{consultants.lastName}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Grade">
