--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -49,13 +49,12 @@
         <a class="nav-link" routerLink="/consultant">Consultants</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="" id="navbarDropdown"
-          aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="#" id="navbarDropdown">
           Manage
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="manage/a">Appointments</a>
-          <a class="dropdown-item" routerLink="manage/c">Consultants</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/manage/a">Appointments</a>
+          <a class="dropdown-item" routerLink="/manage/c">Consultants</a>
         </div>
       </li>
       <li class="nav-item">
@@ -74,3 +73,57 @@
     </ul>
   </div>
 </nav> 
+
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <div><a routerLink="/"><img alt="WC logo" /></a></div>
+
+  <div class="collapse navbar-collapse">
+    <ul class="nav navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="/new" id="navbarDropdown">
+          Appointments
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/new">New Appointment</a>
+          <a class="dropdown-item" routerLink="/upcoming">Upcoming Appointments</a>
+          <a class="dropdown-item" routerLink="/past">Past Appointments</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="/pending" id="navbarDropdown">
+          Reviews
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/pending">Pending Reviews</a>
+          <a class="dropdown-item" routerLink="/past">Past Reviews</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="/admin" id="navbarDropdown">
+          Admin
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/consultants">Manage Consultants</a>
+          <a class="dropdown-item" routerLink="/Settings">Settings</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/resource">Resources and Contact</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login
+            in</button></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0)" (click)="logout()"><button
+            class="btn btn-outline-primary my-2 my-sm-0">Logout</button></a>
+      </li>
+    </ul>
+  </div>
+</nav>  -->
