--- a/DRHSWS_UI/src/app/review/past/past.component.html
+++ b/DRHSWS_UI/src/app/review/past/past.component.html
@@ -1,3 +1,31 @@
-<p>
-  past works!
-</p>
+<table mat-table [dataSource]="reviewsPending" class="mat-elevation-z8" width="100%">
+
+  <ng-container matColumnDef="Date">
+    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <td mat-cell *matCellDef="let reviewsPending"> {{ reviewsPending.apptDate}} </td>
+  </ng-container>
+ 
+  <ng-container matColumnDef="Lunch">
+    <th mat-header-cell *matHeaderCellDef> Lunch </th>
+    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.lunchType}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Student">
+    <th mat-header-cell *matHeaderCellDef> Student </th>
+    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.firstName}} {{reviewsPending.lastName}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Grade">
+    <th mat-header-cell *matHeaderCellDef> Grade </th>
+    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.grade}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Review">
+      <th mat-header-cell *matHeaderCellDef> Review </th>
+      <td mat-cell *matCellDef="let reviewsPending">  </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<br>
