--- a/DRHSWS_UI/src/app/app.component.html
+++ b/DRHSWS_UI/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navigation (featureSelected)="onNavigate($event)"></app-navigation>
+<app-navigation></app-navigation>
 <main>
   <router-outlet></router-outlet>
 </main>
