--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,38 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
   <div><a routerLink="/"><img alt="WC logo" /></a></div>
@@ -42,49 +7,8 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/signup">Sign-ups</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/consultant">Consultants</a>
-      </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="#" id="navbarDropdown">
-          Manage
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" routerLink="/manage/a">Appointments</a>
-          <a class="dropdown-item" routerLink="/manage/c">Consultants</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/resource">Resources and Contact</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login
-            in</button></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)" (click)="logout()"><button
-            class="btn btn-outline-primary my-2 my-sm-0">Logout</button></a>
-      </li>
-    </ul>
-  </div>
-</nav> 
-
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-  <div><a routerLink="/"><img alt="WC logo" /></a></div>
-
-  <div class="collapse navbar-collapse">
-    <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/home">Home</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="/new" id="navbarDropdown">
+        <a class="nav-link dropdown-toggle" role="button" routerLink="/appointment" data-toggle="dropdown" id="navbarDropdown">
           Appointments
         </a>
         <div class="dropdown-menu">
@@ -94,7 +18,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="/pending" id="navbarDropdown">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
           Reviews
         </a>
         <div class="dropdown-menu">
@@ -103,7 +27,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="/admin" id="navbarDropdown">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
           Admin
         </a>
         <div class="dropdown-menu">
@@ -126,4 +50,4 @@
       </li>
     </ul>
   </div>
-</nav>  -->
+</nav> 
