--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.scss
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.scss
@@ -14,11 +14,12 @@
 
 #form{
     max-width:68%;
+    min-width:68%;
     margin-left: 16%;
     margin-right: 16%;
 }
 #weekButtons{
-    //max-width:68%;
+    max-width:70%;
     margin-left: 16%;
     margin-right: 16%;
 }
