--- a/DRHSWS_UI/src/app/review/past/past.component.html
+++ b/DRHSWS_UI/src/app/review/past/past.component.html
@@ -1,28 +1,48 @@
-<table mat-table [dataSource]="reviewsPending" class="mat-elevation-z8" width="100%">
+<br>
+<h3>Past Reviews</h3>
+<label>Filter Range</label>
+<form (ngSubmit)="onSubmit(f)" #f="ngForm" class="form-inline">
+  <div class="form-group">
+    <input id="from" type="text" class="form-control mb-2 mr-sm-2" name="from" ngModel>
+  </div>		
+  <label class="mb-2 mr-sm-2">To</label>
+  <div class="form-group">
+    <input id="to" type=”text” class="form-control mb-2 mr-sm-2" name="to" ngModel>
+  </div>
 
+  <div class="form-group">
+    <button id="sumbit" type="submit" class="btn btn-primary mb-2 mr-sm-2">Filter</button>
+  </div>
+</form>
+<table mat-table [dataSource]="reviewsPast" class="mat-elevation-z8" width="100%">
   <ng-container matColumnDef="Date">
     <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let reviewsPending"> {{ reviewsPending.apptDate}} </td>
+    <td mat-cell *matCellDef="let reviewsPast"> {{ reviewsPast.apptDate}} </td>
   </ng-container>
  
   <ng-container matColumnDef="Lunch">
     <th mat-header-cell *matHeaderCellDef> Lunch </th>
-    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.lunchType}} </td>
+    <td mat-cell *matCellDef="let reviewsPast"> {{reviewsPast.lunchType}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Student">
     <th mat-header-cell *matHeaderCellDef> Student </th>
-    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.firstName}} {{reviewsPending.lastName}}  </td>
+    <td mat-cell *matCellDef="let reviewsPast"> {{reviewsPast.firstName}} {{reviewsPast.lastName}}  </td>
   </ng-container>
 
   <ng-container matColumnDef="Grade">
     <th mat-header-cell *matHeaderCellDef> Grade </th>
-    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.grade}}  </td>
+    <td mat-cell *matCellDef="let reviewsPast"> {{reviewsPast.grade}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Teacher">
+    <th mat-header-cell *matHeaderCellDef> Teacher </th>
+    <td mat-cell *matCellDef="let reviewsPast"> {{reviewsPast.teacher}}  </td>
   </ng-container>
 
   <ng-container matColumnDef="Review">
       <th mat-header-cell *matHeaderCellDef> Review </th>
-      <td mat-cell *matCellDef="let reviewsPending">  </td>
+      <td mat-cell *matCellDef="let reviewsPast"> {{reviewsPast.review}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
