--- a/DRHSWS_UI/src/app/review/pending/pending.component.html
+++ b/DRHSWS_UI/src/app/review/pending/pending.component.html
@@ -57,7 +57,7 @@
 <div *ngIf="write">
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <div class="form-group">
-      <textarea class="form-control" cols="9" rows="3" name="review" ngModel></textarea>
+      <textarea class="form-control" cols="9" rows="3" name="review" placeholder="Write Review" ngModel></textarea>
     </div>
     <button id="edit" type="submit" class="btn btn-outline-primary">Write Review</button>
       </form>
@@ -88,7 +88,7 @@
   <ng-container matColumnDef="Review">
       <th mat-header-cell *matHeaderCellDef> Write Review </th>
       <td mat-cell *matCellDef="let reviewsPending; let i = index">
-        <button id="edit" type="button" class="btn btn-outline-primary" (click)="onClick(i);write=true">Write Review {{i}}</button>
+        <button id="edit" type="button" class="btn btn-outline-primary" (click)="onClick(i);write=true">Write Review</button>
       </td>
   </ng-container>
 
