--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -32,6 +32,7 @@
         </a>
         <div class="dropdown-menu">
           <a class="dropdown-item" routerLink="/admin/consultants">Manage Consultants</a>
+          <a class="dropdown-item" routerLink="/admin/dates">Block Dates</a>
           <a class="dropdown-item" routerLink="/admin/settings">Settings</a>
         </div>
       </li>
