--- a/DRHSWS_UI/src/app/admin/settings/settings.component.html
+++ b/DRHSWS_UI/src/app/admin/settings/settings.component.html
@@ -1,3 +1,44 @@
 <br>
 <h3>Settings</h3>
 <h5>Change Password</h5>
+<form (ngSubmit)="onSubmit(f)" #f="ngForm" id="change">
+    <div class="row">
+    <div class="col-6">
+      <div class="form-group">
+        <label>First Name</label>
+        <input id="firstName" type="text" class="form-control mb-2 mr-sm-2" name="firstName" placeholder="Enter First Name" ngModel>
+      </div>
+    </div>
+    <div class="col-6"></div>  
+      <div class="form-group">
+        <label>Last Name</label>
+        <input id="lastName" type="text" class="form-control mb-2 mr-sm-2" name="lastName" placeholder="Enter Last Name" ngModel>
+      </div>
+    </div>
+    <div class="form-group">
+        <button id="submit" type="submit" class="far btn btn-outline-primary mb-2 mr-sm-2">Submit</button>
+    </div>
+</form>
+<br>
+<h5>Get Password</h5>
+<form (ngSubmit)="onSubmitG(fg)" #fg="ngForm" id="change">
+    <div class="row">
+    <div class="col-6">
+      <div class="form-group">
+        <label>First Name</label>
+        <input id="firstName" type="text" class="form-control mb-2 mr-sm-2" name="firstName" placeholder="Enter First Name" ngModel>
+      </div>
+    </div>
+    <div class="col-6"></div>  
+      <div class="form-group">
+        <label>Last Name</label>
+        <input id="lastName" type="text" class="form-control mb-2 mr-sm-2" name="lastName" placeholder="Enter Last Name" ngModel>
+      </div>
+    </div>
+    <div class="form-group">
+        <button id="submit" type="submit" class="far btn btn-outline-primary mb-2 mr-sm-2">Submit</button>
+    </div>
+</form>
+<div *ngIf="true">
+    <h5>Password: password</h5>
+</div>
