--- a/DRHSWS_UI/src/app/admin/settings/settings.component.html
+++ b/DRHSWS_UI/src/app/admin/settings/settings.component.html
@@ -5,18 +5,19 @@
     <div class="row">
     <div class="col-6">
       <div class="form-group">
-        <label>First Name</label>
-        <input id="firstName" type="text" class="form-control mb-2 mr-sm-2" name="firstName" placeholder="Enter First Name" ngModel>
+        <label>Email (School Email Only)</label>
+        <input id="email" type="text" class="form-control mb-2 mr-sm-2" name="email" placeholder="Enter Email" ngModel>
       </div>
-    </div>
-    <div class="col-6"></div>  
       <div class="form-group">
-        <label>Last Name</label>
-        <input id="lastName" type="text" class="form-control mb-2 mr-sm-2" name="lastName" placeholder="Enter Last Name" ngModel>
-      </div>
-    </div>
-    <div class="form-group">
         <button id="submit" type="submit" class="far btn btn-outline-primary mb-2 mr-sm-2">Submit</button>
+    </div>
+    </div>
+    <div class="col-6">  
+        <div class="form-group">
+            <label>New Password</label>
+            <input id="password" type="text" class="form-control mb-2 mr-sm-2" name="password" placeholder="Enter New Password" ngModel>
+        </div>
+    </div>
     </div>
 </form>
 <br>
@@ -24,21 +25,16 @@
 <form (ngSubmit)="onSubmitG(fg)" #fg="ngForm" id="change">
     <div class="row">
     <div class="col-6">
-      <div class="form-group">
-        <label>First Name</label>
-        <input id="firstName" type="text" class="form-control mb-2 mr-sm-2" name="firstName" placeholder="Enter First Name" ngModel>
-      </div>
+        <div class="form-group">
+            <label>Email (School Email Only)</label>
+            <input id="email" type="text" class="form-control mb-2 mr-sm-2" name="email" placeholder="Enter Email" ngModel>
+        </div>
+        <div class="form-group">
+            <button id="submit" type="submit" class="far btn btn-outline-primary mb-2 mr-sm-2">Submit</button>
+        </div>
     </div>
-    <div class="col-6"></div>  
-      <div class="form-group">
-        <label>Last Name</label>
-        <input id="lastName" type="text" class="form-control mb-2 mr-sm-2" name="lastName" placeholder="Enter Last Name" ngModel>
-      </div>
-    </div>
-    <div class="form-group">
-        <button id="submit" type="submit" class="far btn btn-outline-primary mb-2 mr-sm-2">Submit</button>
     </div>
 </form>
-<div *ngIf="true">
-    <h5>Password: password</h5>
+<div *ngIf="get">
+    <h5>Password: {{passwordG}}</h5>
 </div>
