--- a/DRHSWS_UI/src/app/admin/settings/settings.component.html
+++ b/DRHSWS_UI/src/app/admin/settings/settings.component.html
@@ -21,7 +21,7 @@
     </div>
 </form>
 <br>
-<h5>Get Password</h5>
+<!-- <h5>Get Password</h5>
 <form (ngSubmit)="onSubmitG(fg)" #fg="ngForm" id="change">
     <div class="row">
     <div class="col-6">
@@ -37,4 +37,4 @@
 </form>
 <div *ngIf="get">
     <h5>Password: {{passwordG}}</h5>
-</div>
+</div> -->
