email commented out

--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
@@ -98,6 +98,10 @@
             <option value="12">12</option>
           </select>
         </div>
+        <!-- <div class="form-group">
+          <label for="email">Email</label>
+          <input ngModel name="email" type="email" class="form-control" id="email" placeholder="Enter Email" formControlName="email" required>
+        </div> -->
         <div class="form-group">
           <label for="topic">Topic of Assignment</label>
           <input ngModel name="topic" type="text" class="form-control" id="topic" placeholder="Enter Topic" required>
