--- a/DRHSWS_UI/src/app/review/pending/pending.component.html
+++ b/DRHSWS_UI/src/app/review/pending/pending.component.html
@@ -63,7 +63,8 @@
       </form>
 </div>
 <br>
-<table mat-table [dataSource]="reviewsPending" class="mat-elevation-z8" width="100%">
+<div class="styles mat-elevation-z8">
+<table mat-table [dataSource]="reviewsPending" class="" width="100%">
 
   <ng-container matColumnDef="Date">
     <th mat-header-cell *matHeaderCellDef> Date </th>
@@ -72,7 +73,7 @@
  
   <ng-container matColumnDef="Lunch">
     <th mat-header-cell *matHeaderCellDef> Lunch </th>
-    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.lunchType}} </td>
+    <td mat-cell *matCellDef="let reviewsPending"> {{reviewsPending.lunchType}}-Lunch </td>
   </ng-container>
 
   <ng-container matColumnDef="Student">
@@ -95,4 +96,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</div>
 <br>
