--- a/DRHSWS_UI/src/app/admin/settings/settings.component.html
+++ b/DRHSWS_UI/src/app/admin/settings/settings.component.html
@@ -6,7 +6,7 @@
     <div class="col-6">
       <div class="form-group">
         <label>Email (School Email Only)</label>
-        <input id="email" type="text" class="form-control mb-2 mr-sm-2" name="email" placeholder="Enter Email" ngModel>
+        <input id="email" type="text" class="form-control mb-2 mr-sm-2" name="email" placeholder="Enter Email" ngModel required>
       </div>
       <div class="form-group">
         <button id="submit" type="submit" class="far btn btn-outline-primary mb-2 mr-sm-2">Submit</button>
@@ -15,7 +15,7 @@
     <div class="col-6">  
         <div class="form-group">
             <label>New Password</label>
-            <input id="password" type="text" class="form-control mb-2 mr-sm-2" name="password" placeholder="Enter New Password" ngModel>
+            <input id="password" type="text" class="form-control mb-2 mr-sm-2" name="password" placeholder="Enter New Password" ngModel required>
         </div>
     </div>
     </div>
