--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -33,7 +33,7 @@
   </nav>
 </div>
 <div id="consultant" *ngIf="consultant">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div><a routerLink="/"><img alt="WC logo" /></a></div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav mr-auto">
@@ -55,6 +55,7 @@
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" routerLink="/review/pending">Pending Reviews</a>
+            <a class="dropdown-item" routerLink="/review/past">Past Reviews</a>
           </div>
         </li>
         <li class="nav-item dropdown">
