--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-  <div><a routerLink="/"><img alt="WC logo" /></a></div>
-
+  <div class="navbar-brand">
+     <a class="navbar-item">
+      <img src="../../assets/img/logo.jpg" alt="WC Logo" >
+     </a>
+  </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
