Revert "Merge branch 'master' into drhswc_thomas"
This reverts commit 5114cf0fd82dc1c39387ec8cefc71dd933a94f58, reversing
changes made to fb1f033b093014fa441a00678e43bfe8d4164ab2.

--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.scss
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.scss
@@ -13,8 +13,8 @@
 }
 
 #form{
-    //max-width:68%;
-    width:68%;
+    max-width:68%;
+    min-width:68%;
     margin-left: 16%;
     margin-right: 16%;
 }
