--- a/DRHSWS_UI/src/app/admin/manage-appointments/manage-appointments.component.html
+++ b/DRHSWS_UI/src/app/admin/manage-appointments/manage-appointments.component.html
@@ -88,7 +88,7 @@
     </ng-container>
     <ng-container matColumnDef="Date">
       <th mat-header-cell *matHeaderCellDef> Date </th>
-      <td mat-cell *matCellDef="let dates"> {{dates.appt_date}} </td>
+      <td mat-cell *matCellDef="let dates"> {{dates.date}} </td>
     </ng-container>
     
     <ng-container matColumnDef="Type">
