--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,93 +1,10 @@
-<div id="student" *ngIf="student">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div><a routerLink="/"><img alt="WC logo" /></a></div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link " role="button" routerLink="/appointment/new" id="navbarDropdown">
-            Appointments
-          </a>
-          <!-- <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/appointment/new">New Appointment</a>
-          </div> -->
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/resource">Resources and Contact</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login
-            in</button></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)" (click)="logout()">
-            <button class="btn btn-outline-primary my-2 my-sm-0">Logout</button>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
-<div id="consultant" *ngIf="consultant">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div><a routerLink="/"><img alt="WC logo" /></a></div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
-           Appointments
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/appointment/new">New Appointment</a>
-            <a class="dropdown-item" routerLink="/appointment/upcoming">Upcoming Appointments</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
-            Reviews
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/review/pending">Pending Reviews</a>
-            <a class="dropdown-item" routerLink="/review/past">Past Reviews</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
-            Settings
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/admin/settings">Settings</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/resource">Resources and Contact</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">
-            <button class="btn btn-outline-primary my-2 my-sm-0">Login in</button>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)" (click)="logout()">
-            <button class="btn btn-outline-primary my-2 my-sm-0">Logout</button>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
-<div id="admin" *ngIf="admin">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div><a routerLink="/"><img alt="WC logo" /></a></div>
+
+  <div class="navbar-brand">
+     <a class="navbar-item">
+      <img src="../../assets/img/logo.jpg" alt="WC Logo" >
+     </a>
+  </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
@@ -138,4 +55,3 @@
     </ul>
   </div>
 </nav> 
-</div>
