--- a/DRHSWS_UI/src/app/home/home.component.html
+++ b/DRHSWS_UI/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<br>
 <h3> Deep Run Writing Center </h3>
 <h4> Where Wildcats Write Right! </h4>
 
@@ -6,6 +7,5 @@
 <h4> About </h4>
 
 <p> The Writing Center is located in Ms. Daniel's room 212. It is open on Tuesday A and B lunch and Wednesday A and B during lunch. The Writing Center 
-provides consultants to help students with their writing assignments. In order to submit a paper, sign up on the calendar 
-page and submit your paper through the dropbox. </p>
+provides consultants to help students with their writing assignments. </p>
 
