--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -15,7 +15,7 @@
           </div> -->
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/resource">Resources and Contact</a>
+          <a class="nav-link" routerLink="/resource">Resources</a>
         </li>
       </ul>
       <ul class="navbar-nav justify-content-end">
@@ -67,7 +67,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/resource">Resources and Contact</a>
+          <a class="nav-link" routerLink="/resource">Resources</a>
         </li>
       </ul>
       <ul class="navbar-nav justify-content-end">
@@ -123,7 +123,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/resource">Resources and Contact</a>
+        <a class="nav-link" routerLink="/resource">Resources</a>
       </li>
     </ul>
     <ul class="navbar-nav justify-content-end">
