--- a/DRHSWS_UI/src/app/signup/upcoming/upcoming.component.html
+++ b/DRHSWS_UI/src/app/signup/upcoming/upcoming.component.html
@@ -33,6 +33,12 @@
     <td mat-cell *matCellDef="let apptUpcoming"> {{apptUpcoming.topic}}  </td>
   </ng-container>
 
+  <div class="link">
+  <ng-container matColumnDef="File Link">
+    <th mat-header-cell *matHeaderCellDef> File Link </th>
+    <td mat-cell *matCellDef="let apptUpcoming"> <a href="{{apptUpcoming.fileLink}}" target="_blank">{{apptUpcoming.fileLink}}</a> </td>
+  </ng-container>
+</div>
   <tr mat-header-row *matHeaderRowDef="displayedColumnsAU"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumnsAU;"></tr>
 </table>
