--- a/DRHSWS_UI/src/app/home/home.component.html
+++ b/DRHSWS_UI/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <h3> Deep Run Writing Center </h3>
 <h4> Where Wildcats Write Right! </h4>
 
-<img src="http://www.babylonlibrary.org/wp-content/uploads/Tutoring-Room.jpeg" alt="WC" width="500" class="rounded mx-auto d-block img-fluid" >
+<img src="..\assets\tutor.jpeg" alt="WC" width="500" class="rounded mx-auto d-block img-fluid" >
 
 <h4> About </h4>
 
