--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div id="student" *ngIf="student">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div><a routerLink="/"><img alt="WC logo" /></a></div>
+    <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="65" height="60"></a></div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav mr-auto">
         <li class="nav-item">
